google cooments added

--- a/index.html
+++ b/index.html
@@ -274,6 +274,8 @@
                </article>
 
             </div>
+            <script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-6a8277b4-b6ca-4fa7-9f03-d92d43fefa92" data-elfsight-app-lazy></div>
          </section>
          <!--==================== EXPERIENCE ====================-->
 
@@ -299,6 +301,8 @@
          </section>
       </main>
 
+      
+
       <!--==================== FOOTER ====================-->
       <footer class="footer">
          <div class="footer__container container grid">
@@ -320,18 +324,19 @@
                </ul>
             </div>
 
+            
             <div class="footer__social">
-               <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
+               <a href="https://www.facebook.com/559tinting" target="_blank" class="footer__social-link">
                   <i class="ri-facebook-circle-line"></i>
                </a>
 
-               <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
+               <a href="https://www.instagram.com/moises1463/" target="_blank" class="footer__social-link">
                   <i class="ri-instagram-line"></i>
                </a>
 
-               <a href="https://twitter.com/" target="_blank" class="footer__social-link">
+               <!-- <a href="https://twitter.com/" target="_blank" class="footer__social-link">
                   <i class="ri-twitter-x-line"></i>
-               </a>
+               </a> -->
             </div>
          </div>
 
