google cooments added to navbar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </li>
 
             <li>
-               <a href="#experience" title="Experience" class="nav__link">
+               <a href="#reviews" title="Reviews" class="nav__link">
                   <i class="ri-honour-line"></i>
                </a>
             </li>
@@ -48,6 +48,7 @@
                   <i class="ri-send-plane-line"></i>
                </a>
             </li>
+            
          </ul>
       </nav>
 
@@ -157,6 +158,9 @@
                   </div>
                   <div class="skills__items">
                      <img width="48" height="48" src="https://img.icons8.com/color/48/marker--v1.png" alt="marker--v1"/ class="skills__item"> <a href="https://maps.app.goo.gl/b9xy3GthFQfhWJLy8" target="_blank" class="maps-link">Maps</a>
+                  </div>
+                  <div class="skills__items">
+                     <img width="48" height="48" src="assets/img/review.png" alt="marker--v1"/ class="skills__item"> <a href="#reviews" target="_blank" class="maps-link">Reviews</a>
                   </div>
                   <p class="skills__description">
                      
@@ -274,11 +278,12 @@
                </article>
 
             </div>
-            <script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-6a8277b4-b6ca-4fa7-9f03-d92d43fefa92" data-elfsight-app-lazy></div>
          </section>
          <!--==================== EXPERIENCE ====================-->
-
+         <section id="reviews">
+            <script src="https://static.elfsight.com/platform/platform.js" async></script>
+            <div class="elfsight-app-6a8277b4-b6ca-4fa7-9f03-d92d43fefa92" data-elfsight-app-lazy></div>
+         </section>
          <!--==================== CONTACT ====================-->
          <section class="contact section" id="contact">
             <h2 class="section__title">GET A QUOTE</h2>
