--- a/index.html
+++ b/index.html
@@ -173,24 +173,18 @@
          <section class="projects section" id="projects">
             <h2 class="section__title">GALLERY</h2>
 
-            <div class="container">
-               <div class="box"><img src="assets/img/portfolio/1.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/2.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/3.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/4.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/5.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/6.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/7.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/8.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/9.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/10.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/11.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/12.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/13.jpeg"></div>
-               <div class="box"><img src="assets/img/portfolio/14.jpg"></div>
-               <!-- <div class="box"><img src="assets/img/portfolio/15.jpeg"></div>  -->
+<!-- Place <div> tag where you want the feed to appear -->
+   <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
 
-            </div>
+   <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+   <script type="text/javascript">
+   /* curator-feed-default-feed-layout */
+   (function(){
+   var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
+   i.src="https://cdn.curator.io/published/030ed32c-4f7c-4f55-937d-326a17160302.js";
+   e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+   })();
+   </script>
 
          </section>
 
